<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp">


    <View android:id="@+id/rectangle_8" android:background="@drawable/rectangle_8_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="350dp" android:layout_height="80dp" android:layout_centerHorizontal="true"/>
    <ImageView
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:id="@+id/image_profile"
        android:layout_marginTop="12dp"
        android:layout_marginStart="3dp"
        />
    <RelativeLayout android:id="@+id/group_6" android:layout_marginTop="16dp" android:layout_marginStart="260dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <View android:id="@+id/_bg___group_6_ek1" android:background="@drawable/_bg___group_6_ek1_shape" android:layout_marginStart="-255dp" android:layout_marginTop="-377dp" android:layout_width="58dp" android:layout_height="18dp"/>
        <View android:id="@+id/rectangle_9" android:background="@drawable/rectangle_9_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="75dp" android:layout_height="22dp"/>
        <TextView android:id="@+id/connect" android:textColor="@color/_bg__main_page_color" android:layout_marginLeft="7dp" android:layout_marginTop="2dp" android:layout_width="57dp" android:layout_height="18dp" android:text="@string/connect_string"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/madhavi_bhide" android:layout_marginTop="7dp" android:layout_marginStart="44dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@+id/madhavi_bhide_ek2" android:textStyle="bold" android:textSize="15sp" android:textColor="@color/_bg__searchbar_ek1_color" android:layout_marginLeft="25dp" android:layout_marginTop="0dp" android:layout_width="wrap_content" android:layout_height="16.3dp" android:text="@string/madhavi_bhide_ek2_string"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/upper_indiranagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="25dp"
        android:text="@string/upper_indiranagar_string"
        android:textColor="@color/_bg__searchbar_ek1_color" />
    <TextView android:id="@+id/serves_western_maharashtrian_food" android:textColor="@color/_bg__searchbar_ek1_color" android:layout_marginLeft="68dp" android:layout_marginTop="41dp" android:layout_width="179.9dp" android:layout_height="40dp" android:text="@string/serves_western_maharashtrian_food_string"/>





</RelativeLayout>